[package]
name = "rustyhud"
version = "0.1.0"
authors = ["willnilges <will.nilges@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.99.0"
regex = "1.3.3"
lazy_static = "1.4.0"

[lib]
name = "rustyhud"
path = "src/lib.rs"
